# auto-search-flask-job

./: .gitignore  README.md  config.py  job_count.csv  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: daily_update.yml
crawlers/: __init__.py  a104.py  a1111.py  asyncio_104_craw.py  base_crawler.py  cakeresume.py  meet_jobs.py  test.py
doc/: base.md  header.md  job_count.csv
