[tool.poetry]
name = "auto-search-flask-job"
version = "0.1.0"
description = ""
authors = ["hsuanchi <a0025071@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.3"
pandas = "^1.1.5"
requests = "^2.25.1"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
